# irkit_based_example

./: CMakeLists.txt
src/: app.cpp
